# AKYDev

./: .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml
architecture/: AKYDEV_V1.md  CHANGE_SCHEMA_V1.md
sprints/002-project-model/: PLAN.md  upgrade.sh
src/akydev/: main.py
src/akydev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/akydev/cli/: commands.py
src/akydev/editor/: apply.py  validator.py
src/akydev/planner/: planner.py
src/akydev/prompts/: ast_selector.py  context_builder.py  dependency_graph.py  function_selector.py  generator.py  prompt_builder.py
src/akydev/providers/: base.py  mock.py  service.py
src/akydev/workspace/: project_model.py  scanner.py  task_manager.py
