[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "akydev"
version = "0.1.0"
description = "AI Development Automation Platform"
authors = [
    {name = "Akshar Patel"}
]
requires-python = ">=3.11"

dependencies = [
    "typer",
    "rich",
    "pyyaml",
    "gitpython"
]

[project.scripts]
akydev = "akydev.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]